k8s/local/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: broker-api
          image: local-broker-api:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8080
