k8s/local/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: broker-mysql
          image: bikini-broker-docker_mysql:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3306
