k8s/local/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: broker-redis
          image: bikini-broker-docker_redis:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
