k8s/local/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-api
  labels:
    app: api
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: api
