k8s/local/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
