k8s/local/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
