k8s/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: broker-api
              servicePort: 8080
